WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209974
[JSC] TypedArray#subarray should throw OOM error gracefully
https://bugs.webkit.org/show_bug.cgi?id=209974
Summary
[JSC] TypedArray#subarray should throw OOM error gracefully
Yusuke Suzuki
Reported
2020-04-03 10:28:52 PDT
[JSC] TypedArray#subarray should throw OOM error gracefully
Attachments
Patch
(3.72 KB, patch)
2020-04-03 10:31 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-04-03 10:31:02 PDT
Created
attachment 395392
[details]
Patch
Yusuke Suzuki
Comment 2
2020-04-03 10:31:05 PDT
<
rdar://problem/61253901
>
Mark Lam
Comment 3
2020-04-03 10:36:36 PDT
Comment on
attachment 395392
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2020-04-03 11:29:12 PDT
Committed
r259478
: <
https://trac.webkit.org/changeset/259478
>
Aakash Jain
Comment 5
2020-04-04 05:50:43 PDT
> Committed
r259478
: <
https://trac.webkit.org/changeset/259478
>
The newly added test stress/typed-array-subarray-can-throw-oom-error.js seems to be failing consistently on jsc-armv7 and jsc-mips. History:
https://results.webkit.org/?suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&test=stress%2Ftyped-array-subarray-can-throw-oom-error.js.default&test=stress%2Ftyped-array-subarray-can-throw-oom-error.js.dfg-eager&test=stress%2Ftyped-array-subarray-can-throw-oom-error.js.dfg-eager-no-cjit-validate&test=stress%2Ftyped-array-subarray-can-throw-oom-error.js.eager-jettison-no-cjit
Mark Lam
Comment 6
2020-04-04 09:16:38 PDT
I've skipped the test for armv7 and mips in
r259530
: <
http://trac.webkit.org/r259530
>, and filed
https://bugs.webkit.org/show_bug.cgi?id=210003
for the root cause to be investigated.
Keith Miller
Comment 7
2020-04-04 09:47:03 PDT
(In reply to Mark Lam from
comment #6
)
> I've skipped the test for armv7 and mips in
r259530
: > <
http://trac.webkit.org/r259530
>, and filed >
https://bugs.webkit.org/show_bug.cgi?id=210003
for the root cause to be > investigated.
I think you'll just want to skip if $memoryLimited (might be a different name). These failures sometimes cause problems on iOS testing too.
Yusuke Suzuki
Comment 8
2020-04-04 10:42:38 PDT
(In reply to Keith Miller from
comment #7
)
> (In reply to Mark Lam from
comment #6
) > > I've skipped the test for armv7 and mips in
r259530
: > > <
http://trac.webkit.org/r259530
>, and filed > >
https://bugs.webkit.org/show_bug.cgi?id=210003
for the root cause to be > > investigated. > > I think you'll just want to skip if $memoryLimited (might be a different > name). These failures sometimes cause problems on iOS testing too.
Yes, looks like this is timeout because these bots are slow.
Yusuke Suzuki
Comment 9
2020-04-04 11:56:27 PDT
Committed
r259535
: <
https://trac.webkit.org/changeset/259535
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug