[JSC] TypedArray#subarray should throw OOM error gracefully https://bugs.webkit.org/show_bug.cgi?id=209974 <rdar://problem/61253901>

Reviewed by Mark Lam.

JSTests:

* stress/typed-array-subarray-can-throw-oom-error.js: Added.
(foo):
(canThrow):
(bar):
(get bar):

Source/JavaScriptCore:

After r259069 change, possiblySharedBuffer can return nullptr if OOM happens.
However, TypedArray#subarray didn't handle this case properly. This patch throws
an OOM error appropriately if possiblySharedBuffer returns nullptr in TypedArray#subarray.

* runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::genericTypedArrayViewPrivateFuncSubarrayCreate):

Canonical link: https://commits.webkit.org/222896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259478 268f45cc-cd09-0410-ab3c-d52691b4dbfc